<resources>
    <string name="app_name">NewsApp Final Task</string>
    <string name="open_browser">Open Browser</string>
    <string name="news_image">News Image</string>
    <string name="back_button">BackButton</string>
    <string name="news_content">News Content</string>
    <string name="close">Close</string>
    <string name="url">www.url.com</string>
    <string name="reload">Reload</string>
    <string name="next_button">NextButton</string>
    <string name="summary">Summarize</string>
    <string name="share">Share</string>
    <string name="title">News Title</string>
    <string name="author">Author: Author Name</string>
    <string name="source">Source: source</string>
    <string name="publish">Published At: dd/mm/yyyy, hh:mm</string>
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="highlight">Highlight</string>
    <string name="sentiment">Sentiment</string>
    <string name="qna"><![CDATA[Q&A]]></string>
    <string name="keyword">Enter keyword</string>
    <string name="clear_search">Clear Search</string>
    <string name="show_filters">Show Filters</string>
    <string name="search">Search</string>
    <string name="expand">Expand content</string>
    <string name="app_logo">NewsApp Logo</string>
    <string name="timeago">xxh ago</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="spotlight">Spotlight</string>
    <string name="organize">Organize</string>
    <string name="summarized">Summarized</string>
    <string name="breaking_news">Breaking News</string>
    <string name="latest">Latest</string>
    <string name="loading_summarize">Summarizing in progress...</string>
    <string name="save">save</string>
</resources>