<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivNewsImage"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/news_image"
        android:scaleType="centerCrop"
        android:background="@color/md_theme_onSurface"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/title"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/md_theme_outline_highContrast"/>

        <TextView
            android:id="@+id/tvTimeAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/timeago"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/md_theme_outlineVariant_highContrast"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/content"
            android:fontFamily="@font/poppins_regular"
            android:paddingTop="4dp"
            android:textColor="@color/md_theme_outline_highContrast"
            tools:ignore="VisualLintLongText" />
    </LinearLayout>

</LinearLayout>
