<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:theme="@style/Base.Theme.NewsApp">

    <ImageView
        android:id="@+id/imageViewNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/news_image"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_background"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/md_theme_outline_highContrast"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_outline_highContrast"
            android:textSize="14sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/news_content" />
    </LinearLayout>

</FrameLayout>
