<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/title"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/md_theme_outline_highContrast"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp">

            <!-- Logo Source (Lingkaran) -->
            <ImageView
                android:id="@+id/ivLogoSource"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_shape"
                android:clipToOutline="true"
                android:contentDescription="@string/url"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:targetApi="s" />

            <!-- URL Source -->
            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/url"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/md_theme_outline_highContrast"/>
        </LinearLayout>
<!--        <TextView-->
<!--            android:id="@+id/tvSource"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/source"-->
<!--            android:fontFamily="@font/nunito_sans_regular"-->
<!--            android:textColor="@color/md_theme_outlineVariant_highContrast"-->
<!--            android:textSize="14sp" />-->

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@color/md_theme_outlineVariant_highContrast"/>

        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@color/md_theme_outlineVariant_highContrast"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/content"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:textColor="@color/md_theme_outline_highContrast"
            tools:targetApi="o"
            tools:ignore="VisualLintLongText" />
    </LinearLayout>
</ScrollView>
